Implementando cabeçalho ao site

--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercado Livre | Crie a sua conta agora</title>
-</head>
-<body>
-    
-</body>
-</html>
+    <!DOCTYPE html>
+    <html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mercado Livre | Crie a sua conta agora</title>
+    </head>
+    <body>
+        <header>
+            <img>
+        </header>
+
+        <ul>
+            <a href="#"><li>Crie a sua conta</li></a>
+            <a href="#"><li>Entre</li></a>
+            <a href="#"><li>Compras</li></a>
+            <a href="#"><li>Vender</li></a>
+            <a href="#"><li>Contato</li></a>
+
+
+       </ul>
+        
+    </body>
+    </html>
