Adicionando formulario ao site

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
 
         <P>Crie a sua conta Agora! E aproveite as nossas ofertas imperdíveis.</P>
 
+        <form>
+           <input type="text" placeholder="Nome">
+           <input type="email" placeholder="E-mail">
+           <input type="submit" value="Enviar">
+
+       </form>
+
+
+
+
 
         </aside>
 
