Adicionando imagem central ao site

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
 
        </form>
 
-
-
-
-
         </aside>
+
+        <article>
+
+           <img src="mercado-livre-logo.png" alt="Imagem-de-logo-do-mercado-livre">
+           
+           
+        </article>
 
 
         </main>
