Adicionando logo ao site

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             
-            <img>
+            <img src="mercado-livre-logo (1).png" alt=" Logo Mercado Livre">
         
         <ul>
             <a href="#"><li>Crie a sua conta</li></a>
