Modificando os menus do site

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <img src="mercado-livre-logo (1).png" alt=" Logo Mercado Livre">
         
         <ul>
-            <a href="#"><li>Crie a sua conta</li></a>
-            <a href="#"><li>Entre</li></a>
-            <a href="#"><li>Compras</li></a>
-            <a href="#"><li>Vender</li></a>
-            <a href="#"><li>Contato</li></a>
+            <a href="#"><li><strong>Crie a sua conta</strong></li></a>
+            <a href="#"><li><strong>Entre</strong></li></a>
+            <a href="#"><li><strong>Compras</strong></li></a>
+            <a href="#"><li><strong>Vender</strong></li></a>
+            <a href="#"><li><strong>Contato</strong></li></a>
        </ul>
 
             </header>
