Alterando a imagem principal do site

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <article>
 
-           <img src="mercado-livre-logo (3).png" alt="Imagem-de-logo-do-mercado-livre">
+           <img src="https://http2.mlstatic.com/D_NQ_NP849294-MLA47444376729_092021-B.webp" alt="Imagem-de-logo-do-mercado-livre">
            
            
         </article>
