Alterando o paragrafo do site

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h2>SUPER OFERTAS</h2>
         <h2>ENTREGAS FULL</h2>
 
-        <P>Crie a sua conta Agora! E aproveite as nossas ofertas imperdíveis.</P>
+        <P><strong>Crie a sua conta Agora! E aproveite as nossas ofertas imperdíveis.</strong></P>
 
         <form>
            <input type="text" placeholder="Nome">
