Alterando paragrafo e formulario do site

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2>SUPER OFERTAS</h2>
         <h2>ENTREGAS FULL</h2>
 
-        <P><strong>Crie a sua conta Agora! E aproveite as nossas ofertas imperdíveis.</strong></P>
+        <P><strong>CRIE A SUA CONTA AGORA! E APROVEITE AS NOSSAS OFERTAS IMPERDÍVEIS.</strong></P>
 
         <form>
            <input type="text" placeholder="Nome">
