Adicionando links externos ao menu do site

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <img src="mercado-livre-logo (1).png" alt=" Logo Mercado Livre">
         
         <ul>
-            <a href="#"><li><strong>Crie a sua conta</strong></li></a>
-            <a href="#"><li><strong>Entre</strong></li></a>
-            <a href="#"><li><strong>Compras</strong></li></a>
-            <a href="#"><li><strong>Vender</strong></li></a>
-            <a href="#"><li><strong>Contato</strong></li></a>
+            <a href="https://www.mercadolivre.com.br/hub/registration/landing#nav-header"><li><strong>Crie a sua conta</strong></li></a>
+            <a href="https://www.mercadolivre.com/jms/mlb/lgz/login?platform_id=ML&go=https%3A%2F%2Fwww.mercadolivre.com.br%2F&loginType=explicit#nav-header"><li><strong>Entre</strong></li></a>
+            <a href="https://myaccount.mercadolivre.com.br/my_purchases/list#nav-header"><li><strong>Compras</strong></li></a>
+            <a href="https://www.mercadolivre.com.br/anuncie/hub#nav-header"><li><strong>Vender</strong></li></a>
+            <a href="https://www.mercadolivre.com.br/ajuda#nav-header"><li><strong>Contato</strong></li></a>
        </ul>
 
             </header>
