--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="styles.css">
+        <script src="script.js" defer></script>
         <link rel="shortcut icon" type="image/x-con" href="oie_transparent (58).png">
         <title>Mercado Livre | Crie a sua conta agora</title>
     </head>
